<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    tools:context=".services_button">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/medical"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:onClick="medicalActivity"
                android:text="@string/MEDICALCENTRE"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/childcare"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/CHILDCARE"
                android:textStyle="bold" />

            <Button
                android:id="@+id/chinese"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/CHINESE"
                android:textStyle="bold" />

            <Button
                android:id="@+id/counselling"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/COUNSELLING"
                android:textStyle="bold" />

            <Button
                android:id="@+id/disability"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/DISABILITY"
                android:textStyle="bold" />

            <Button
                android:id="@+id/athlete"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/ATHLETE"
                android:textStyle="bold" />

            <Button
                android:id="@+id/careers"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/CAREERS"
                android:textStyle="bold" />

            <Button
                android:id="@+id/international"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/INTERNATIONAL"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rainbow"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/RAINBOWSTUD"
                android:textStyle="bold" />

            <Button
                android:id="@+id/maoristud"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/MAORISTUD"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pacific"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/PACIFIC"
                android:textStyle="bold" />

            <Button
                android:id="@+id/religious"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/RELIGIOUS"
                android:textStyle="bold" />

            <Button
                android:id="@+id/studenthub"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/STUDENTHUB"
                android:textStyle="bold" />

            <Button
                android:id="@+id/studiesupport"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:text="@string/STUDIESSUPPORT"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>