<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    tools:context=".courses_button">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/architecture"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:onClick="architectureActivity"
                android:text="@string/ARCHITECTURE"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/engineering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/socialsci" />

            <Button
                android:id="@+id/art"
                android:layout_width="302dp"
                android:layout_height="60dp"
                android:onClick="artActivity"
                android:text="@string/ART"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/engineering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/socialsci" />

            <Button
                android:id="@+id/business"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/BUSINESS"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/create"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/CREATIVETECH"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/comm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/science" />

            <Button
                android:id="@+id/comm"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/COMMUNICATION"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/health"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create" />

            <Button
                android:id="@+id/compsci"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/COMPSCI"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/education"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/EDUCATION"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/engineering"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/ENGINEERING"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/law"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/math" />

            <Button
                android:id="@+id/health"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/HEALTH"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/socialsci"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comm" />

            <Button
                android:id="@+id/tourism"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/TOURISM"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/lang"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/LANGUAGE"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sport" />

            <Button
                android:id="@+id/law"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/LAW"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/engineering" />

            <Button
                android:id="@+id/maori"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/MAORI"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/math"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/MATH"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/engineering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/socialsci" />

            <Button
                android:id="@+id/science"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/SCIENCE"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maori" />

            <Button
                android:id="@+id/socialsci"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/SOCIALSCI"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/math"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/health" />

            <Button
                android:id="@+id/sport"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:text="@string/SPORT"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/lang"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/law" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>