<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    tools:context=".TimetableActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:background="#FFC0CB"
        android:onClick="mondayActivity"
        android:text="@string/monday"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="-9dp"
        android:layout_marginRight="-9dp"
        android:background="#FFEDAB"
        android:onClick="wednesdayActivity"
        android:text="@string/wednesday"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#D2FACD"
        android:onClick="thursdayActivity"
        android:text="@string/thursday"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#FFB4A2"
        android:onClick="tuesdayActivity"
        android:text="@string/tuesday"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="517dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginRight="-16dp"
        android:background="#C7C4FF"
        android:onClick="fridayActivity"
        android:text="@string/friday"
        android:textSize="36sp"
        android:textStyle="bold" />
</RelativeLayout>
